--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: rgb(10, 9, 9);
 }
 
 .gallery {
@@ -16,22 +17,27 @@ body {
     overflow-x: auto;
     margin-bottom: 20px;
     
+    
 }
 
 .thumbnail {
-    width: 200px;
+    width: 100px;
     height: 600px;
     margin-right: 10px;
     cursor: pointer;
     transition: transform 0.3s;
+    box-shadow: black;
 }
 
 .thumbnail:hover {
     transform: scale(1.1);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); /* Add shadow on hover */
-   
+    opacity: 20%;
+   justify-content:space-between;
+   gap: 0;
     
 }
+
 
 .full-image-container {
     max-width: 100%;
@@ -44,5 +50,5 @@ body {
     height: auto;
     border: 2px solid #ccc;
     padding: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(49, 44, 44, 0.1);
 }
